tests/ui/traits/object/incomplete-multiple-super-projection.stderr
error: conflicting associated type bindings for `Assoc`
  --> $DIR/incomplete-multiple-super-projection.rs:20:22
   |
LL | impl<A, B> Trait for dyn Dyn<A, B> {
   |                      ^^^^^^^^^^^^^
   |
   = note: `Assoc` (in `Sup<B>`) is specified to be `B`
   = note: `Assoc` (in `Sup<A>`) is also specified to be `A`

error: conflicting associated type bindings for `Assoc`
  --> $DIR/incomplete-multiple-super-projection.rs:25:29
   |
LL | fn call<A, B>(x: usize) -> <dyn Dyn<A, B> as Trait>::Assoc {
   |                             ^^^^^^^^^^^^^
   |
   = note: `Assoc` (in `Sup<B>`) is specified to be `B`
   = note: `Assoc` (in `Sup<A>`) is also specified to be `A`

error: conflicting associated type bindings for `Assoc`
  --> $DIR/incomplete-multiple-super-projection.rs:25:29
   |
LL | fn call<A, B>(x: usize) -> <dyn Dyn<A, B> as Trait>::Assoc {
   |                             ^^^^^^^^^^^^^
   |
   = note: `Assoc` (in `Sup<B>`) is specified to be `B`
   = note: `Assoc` (in `Sup<A>`) is also specified to be `A`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: conflicting associated type bindings for `Assoc`
  --> $DIR/incomplete-multiple-super-projection.rs:25:29
   |
LL | fn call<A, B>(x: usize) -> <dyn Dyn<A, B> as Trait>::Assoc {
   |                             ^^^^^^^^^^^^^
   |
   = note: `Assoc` (in `Sup<B>`) is specified to be `B`
   = note: `Assoc` (in `Sup<A>`) is also specified to be `A`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0277]: the trait bound `(dyn Dyn<A, B> + 'static): Trait` is not satisfied
  --> $DIR/incomplete-multiple-super-projection.rs:25:28
   |
LL | fn call<A, B>(x: usize) -> <dyn Dyn<A, B> as Trait>::Assoc {
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Trait` is not implemented for `(dyn Dyn<A, B> + 'static)`
   |
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | fn call<A, B>(x: usize) -> <dyn Dyn<A, B> as Trait>::Assoc where (dyn Dyn<A, B> + 'static): Trait {
   |                                                            ++++++++++++++++++++++++++++++++++++++

error[E0277]: the trait bound `(dyn Dyn<A, B> + 'static): Trait` is not satisfied
  --> $DIR/incomplete-multiple-super-projection.rs:25:28
   |
LL | fn call<A, B>(x: usize) -> <dyn Dyn<A, B> as Trait>::Assoc {
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Trait` is not implemented for `(dyn Dyn<A, B> + 'static)`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | fn call<A, B>(x: usize) -> <dyn Dyn<A, B> as Trait>::Assoc where (dyn Dyn<A, B> + 'static): Trait {
   |                                                            ++++++++++++++++++++++++++++++++++++++

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.
